# bioflow

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bioflow_진행현황.md  mkdocs.yml  pyproject.toml
.github/workflows/: candidate-smoke-test.yml  ci.yml  docs.yml  nfcore-concordance.yml  nightly-smoke.yml  paper.yml  release.yml  scanpy-image.yml  tool-citations.yml
analysis/: README.md
analysis/dickeya/: analyze_abricate_full.py  build_core_alignment.py  build_report.py  download_full.py  extract_pan_reps.py  island_analysis.py  plot_cafe.py  plot_full_tree.py  run_13strain_pangenome_sdk.py  run_abricate_full.py  run_amr_vf.py  run_cafe.py  (+12 more)
bioflow/: __init__.py  cli.py  io.py  report.py  sdk.py
conda-recipe/: meta.yaml
docker/: docker-compose.yml
docs/: DESIGN.md  MAINTAINER.md  architecture.md  index.md  install.md  quickstart.md
examples/: cache_demo.py  config_atac_seq.yaml  config_chip_seq.yaml  config_custom.yaml  config_eukaryote_hifi.yaml  config_metagenomics.yaml  config_methylation.yaml  config_prokaryote_short.yaml  config_proteomics.yaml  config_recommend.yaml  config_rnaseq.yaml  config_scrna_seq.yaml  parallel_demo.py  pectobacterium_demo.py  pipeline_demo.py  recipes_quickstart.py  stage_demo.py
hooks/: pre-commit
paper/: paper.bib  paper.md
registry/: io_contracts.json  schema.yaml  tool_citations.json
scripts/: bump_tools.py  compare_nfcore.py  fetch_tool_citations.py  gen_docs.py  gen_methyl_fixture.py  install-hooks.sh  install-schedule-cron-daily.sh  install-schedule-cron-weekly.sh  install-schedule-cron.sh  install-schedule-daily.ps1  install-schedule-weekly.ps1  install-schedule-windows.ps1  io_contracts.py  pin_digests.py  refresh_tags.py  repin_tool.py  verify_bump.py
update/: CHANGELOG.md  REGISTRY_CHANGELOG.md  benchmark.py  cowork_schedule_prompt.md  freshness_check.py  release_watch.py  research_prompt.md
web/: index.html
(+460 files in other folders)
