[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioflow"
version = "0.1.6"
description = "Bioinformatics pipeline platform: genome assembly/annotation and RNA-seq DEG, orchestrated over per-tool Docker containers."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "bioflow", email = "hope9901@gmail.com" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.7",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "jsonschema>=4.22",
    "docker>=7.1",
    "psutil>=5.9",
    "questionary>=2.0",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "pynvml>=11.5; platform_system == 'Linux'",
]

[project.urls]
"Homepage" = "https://github.com/hope9901/bioflow"
"Repository" = "https://github.com/hope9901/bioflow"
"Bug Tracker" = "https://github.com/hope9901/bioflow/issues"
"Changelog" = "https://github.com/hope9901/bioflow/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
bioflow = "bioflow.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["bioflow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E402: standalone scripts do sys.path.insert before bioflow imports (intentional)
# E701: single-line try/except used in examples for cp949-safe stdout setup
ignore = []

[tool.ruff.lint.per-file-ignores]
# Examples are standalone scripts — sys.path manipulation before imports is intentional
"examples/*.py" = ["E402", "E701"]
# Tests use inline semicolons as a compact setup style
"tests/**/*.py" = ["E702", "E701", "F841"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "docker: marks tests that require a running Docker daemon (deselect with '-m not docker')",
    "slow: marks tests that take a long time to run",
]
